// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing ConfirmationPrompt component on delete action should render the ConfirmationPrompt component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="confirmation-prompt"
      >
        <p
          class="message"
        >
          Delete the recording Track001
        </p>
        <div
          class="content-buttons"
        >
          <button
            class="sc-bdvvtL czZeOQ"
            type="button"
          >
            cancel
          </button>
          <button
            class="sc-bdvvtL czZeOQ"
            type="button"
          >
            Delete
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="confirmation-prompt"
    >
      <p
        class="message"
      >
        Delete the recording Track001
      </p>
      <div
        class="content-buttons"
      >
        <button
          class="sc-bdvvtL czZeOQ"
          type="button"
        >
          cancel
        </button>
        <button
          class="sc-bdvvtL czZeOQ"
          type="button"
        >
          Delete
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Testing ConfirmationPrompt component on edit action should render the ConfirmationPrompt component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="confirmation-prompt"
      >
        <p
          class="message"
        >
          Editing Track002
        </p>
        <div
          class="content-input"
        >
          <label
            class="label-name"
          >
            New name
          </label>
          <input
            class="edit-input"
            placeholder="Write here the new name"
            type="text"
          />
        </div>
        <span
          class="error-message"
        >
          The name is empty
        </span>
        <div
          class="content-buttons"
        >
          <button
            class="sc-bdvvtL czZeOQ"
            type="button"
          >
            cancel
          </button>
          <button
            class="sc-bdvvtL czZeOQ"
            type="button"
          >
            Update
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="confirmation-prompt"
    >
      <p
        class="message"
      >
        Editing Track002
      </p>
      <div
        class="content-input"
      >
        <label
          class="label-name"
        >
          New name
        </label>
        <input
          class="edit-input"
          placeholder="Write here the new name"
          type="text"
        />
      </div>
      <span
        class="error-message"
      >
        The name is empty
      </span>
      <div
        class="content-buttons"
      >
        <button
          class="sc-bdvvtL czZeOQ"
          type="button"
        >
          cancel
        </button>
        <button
          class="sc-bdvvtL czZeOQ"
          type="button"
        >
          Update
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
